TableGroup IAM [color: #222] {
  users
  user_roles
  roles
  role_permissions
  permissions
}

Table users {
    id          int       [pk, increment]
    name        varchar
    email       varchar   [unique]
    password    varchar
    created_at  datetime
    updated_at  datetime
    deleted_at  datetime  [default: null]
}

Table user_roles {
    id          int       [pk, increment]
    user_id     int       [ref: > users.id]
    role_id     int       [ref: > roles.id]
    created_at  datetime
    updated_at  datetime
    deleted_at  datetime  [default: null]
}

Table roles {
    id          int       [pk, increment]
    name        varchar
    key         varchar   [unique]
    created_at  datetime
    updated_at  datetime
    deleted_at  datetime  [default: null]
}

Table role_permissions {
    id            int       [pk, increment]
    role_id       int       [ref: > roles.id]
    permission_id int       [ref: > permissions.id]
    created_at  datetime
    updated_at  datetime
    deleted_at  datetime  [default: null]
}

Table permissions {
    id          int       [pk, increment]
    name        varchar
    key         varchar   [unique]
    created_at  datetime
    updated_at  datetime
    deleted_at  datetime  [default: null]
}